Expanded Cheat Menu: ### Changed: - Cleaned up the Fixes menu.
Mods:
Game Rules Permanent Disasters:
Add four new game rules for each of the disasters

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,5 @@
 "ID", " Text"
+302535920000935,
 302535920000990,
 302535920001066,
 302535920001085,
@@ -6,6 +7,7 @@
 302535920001087,
 302535920001095,
 302535920001096,
+302535920001268,
 302535920001309,
 302535920001342,
 302535920001349,
@@ -96,7 +98,7 @@
 302535920000069, "Examine"
 302535920000491, "Examine Object"
 302535920001073, "Console"
-302535920000242, "<color red>%s</color> is blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access ;)"
+302535920000242, "<color ChoGGi_red>%s</color> is blocked by SM function blacklist; use ECM HelperMod to bypass or tell the devs that ECM is awesome and it should have Über access ;)"
 302535920001302, "Find"
 302535920001303, "Search for text within <green>%s</green>."
 302535920000306, "Everything"
@@ -115,7 +117,7 @@
 302535920000042, "City"
 302535920000074, "Cancel without changing anything."
 302535920000084, "Auto-Refresh"
-302535920000090, "Error opening: <color red>%s</color>"
+302535920000090, "Error opening: <color ChoGGi_red>%s</color>"
 302535920000106, "Current"
 302535920000111, "Cover the entire map from the centre."
 302535920000112, "Cover the entire map from a corner."
@@ -201,10 +203,10 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000740, "Asian"
 302535920001283, "Indian"
 302535920001284, "Hispanic"
-302535920000006, "Failed to save settings to <color red>%s</color>: <yellow>%s</yellow>"
-302535920000243, "Problem saving settings! Error: <color red>%s</color>"
-302535920000007, "Problem loading settings! Error: <color red>%s</color>"
-302535920000008, "Error: Couldn't convert old settings to new settings: <color red>%s</color>"
+302535920000006, "Failed to save settings to <color ChoGGi_red>%s</color>: <yellow>%s</yellow>"
+302535920000243, "Problem saving settings! Error: <color ChoGGi_red>%s</color>"
+302535920000007, "Problem loading settings! Error: <color ChoGGi_red>%s</color>"
+302535920000008, "Error: Couldn't convert old settings to new settings: <color ChoGGi_red>%s</color>"
 302535920000009, "Missing Scenario Name"
 302535920000010, "Missing Name"
 302535920000011, "Missing Description"
@@ -234,11 +236,11 @@ See the bottom of Gameplay>Controls if you've changed the key binding."
 302535920000888, "Any .lua files in here will be part of a list that you can execute in-game from the console menu."
 302535920001297, "Toggle Flight Grid"
 302535920001298, "Shows a square grid with terrain/objects shape."
-302535920001267, "<color red>%s</color> at position: <yellow>%s</yellow> was stopped."
+302535920001267, "<color ChoGGi_red>%s</color> at position: <yellow>%s</yellow> was stopped."
 302535920000968, "Collisions"
 302535920000969, "Collisions <yellow>%s</yellow> on <green>%s</green>"
-302535920000012, "Error borked building: <color red>%s</color>"
-302535920000015, "Can't colour <color red>%s</color>."
+302535920000012, "Error borked building: <color ChoGGi_red>%s</color>"
+302535920000015, "Can't colour <color ChoGGi_red>%s</color>."
 302535920000017, "Use the colour picker (<right_click>*2 for instant change)."
 302535920000018, "Don't use the colour picker: Numbers range from -128 to 127.
 If you want shiny metal: use 120 for Metallic and -128 for Roughness."
@@ -254,29 +256,29 @@ You can copy and paste numbers if you want."
 302535920000026, "if they're there; resets to default colours."
 302535920000027, "Nothing selected"
 302535920000028, "Find Resource"
-302535920000029, "Error: Cannot find any <color red>%s</color>."
+302535920000029, "Error: Cannot find any <color ChoGGi_red>%s</color>."
 302535920000032, "Select a resource to find"
 302535920000030, "To show the console log text; press Tilde or Enter and click the ""%s"" button then make sure ""%s"" is checked."
 302535920001441, "<left_click> Activate MenuItem <right_click> Add/Remove Quickbar"
 302535920001439, "~obj, @func, @@type, $id, %img, ^str, *r/*g/*m threads. Hover mouse for more info."
-302535920001440, "<green>~</green><yellow>obj</yellow> opens object in examine dlg, use <color red>ex(obj)</color> in lua code.
+302535920001440, "<green>~</green><yellow>obj</yellow> opens object in examine dlg, use <color ChoGGi_red>ex(obj)</color> in lua code.
 <green>~!</green><yellow>obj</yellow> opens object's attachments in examine dlg.
 
 <green>&</green><yellow>handle</yellow> examine object using handle id.
 
-<green>@</green><yellow>GetMissionSponsor</yellow> prints file name and line number of function, use <color red>format_value(obj)</color> in lua code.
+<green>@</green><yellow>GetMissionSponsor</yellow> prints file name and line number of function, use <color ChoGGi_red>format_value(obj)</color> in lua code.
 
-<green>@@</green><yellow>EntityData</yellow> prints type of obj, use <color red>type(obj)</color> in lua code.
+<green>@@</green><yellow>EntityData</yellow> prints type of obj, use <color ChoGGi_red>type(obj)</color> in lua code.
 
-<green>%</green><yellow>""UI/Vignette.tga""</yellow> opens image in image viewer, use <color red>OpenImageViewer(image)</color> in lua code.
+<green>%</green><yellow>""UI/Vignette.tga""</yellow> opens image in image viewer, use <color ChoGGi_red>OpenImageViewer(image)</color> in lua code.
 
-<green>^</green><yellow>""text string""</yellow> opens text in text editor, use <color red>OpenTextViewer(string)</color> in lua code.
+<green>^</green><yellow>""text string""</yellow> opens text in text editor, use <color ChoGGi_red>OpenTextViewer(string)</color> in lua code.
 
-<green>$</green><yellow>123</yellow> or <green>$</green><yellow>EffectDeposit.display_name</yellow> prints translated string, use <color red>trans(obj)</color> in lua code.
+<green>$</green><yellow>123</yellow> or <green>$</green><yellow>EffectDeposit.display_name</yellow> prints translated string, use <color ChoGGi_red>trans(obj)</color> in lua code.
 
-<green>*r</green> <yellow>Sleep(1000) print(""sleeping"")</yellow> to wrap in a real time thread (or <green>*g</green>), use <color red>CreateRealTimeThread(func)</color> in lua code..
+<green>*r</green> <yellow>Sleep(1000) print(""sleeping"")</yellow> to wrap in a real time thread (or <green>*g</green>), use <color ChoGGi_red>CreateRealTimeThread(func)</color> in lua code..
 
-<green>!</green><yellow>UICity.labels.TerrainDeposit[1]</yellow> move camera and select obj, use <color red>ViewAndSelectObject(obj)</color> in lua code.
+<green>!</green><yellow>UICity.labels.TerrainDeposit[1]</yellow> move camera and select obj, use <color ChoGGi_red>ViewAndSelectObject(obj)</color> in lua code.
 
 <green>s</green> = <yellow>SelectedObj</yellow>, <green>c()</green> = <yellow>GetTerrainCursor()</yellow>, <green>restart()</green> = <yellow>quit(""restart"")</yellow>"
 302535920001401, "Removed missing mod building from %s: %s, entity: %s, handle: %s"
@@ -343,7 +345,7 @@ If this isn't a dumping site then waste rock will not be emptied."
 302535920000502, "Treat uppercase and lowercase as distinct."
 302535920001305, "Find Within"
 302535920001306, "Enter text to find"
-302535920001304, "Set how many levels within this table we search. <color red>Warning</color>: O(n)."
+302535920001304, "Set how many levels within this table we search. <color ChoGGi_red>Warning</color>: O(n)."
 302535920000870, "Max amount of pools that can form."
 302535920000532, "All Max"
 302535920000533, "All Min"
@@ -419,7 +421,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920000692, "Log is blank (well not anymore)."
 302535920000477, "Clear out the windowed console log."
 302535920000986, "Translated"
-302535920000920, "Examining objs from this dlg will <color red>%s</color>examine them all in a single dlg."
+302535920000920, "Examining objs from this dlg will <color ChoGGi_red>%s</color>examine them all in a single dlg."
 302535920000590, "Batch"
 302535920000841, "If examining a table then exec this code for each entry.
 If it's an associative table then <yellow>o = value</yellow>."
@@ -429,7 +431,7 @@ If it's an associative table then <yellow>o = value</yellow>."
 302535920000417, "Null reference"
 302535920000628, "Close the examine dialog
 Hold <green>Shift</green> to close all ""grouped"" examine dialogs (any ex dlg opened from an ex dlg).
-Hold <green>Ctrl</green> to close <color red>all</color> ECM dialogs."
+Hold <green>Ctrl</green> to close <color ChoGGi_red>all</color> ECM dialogs."
 302535920000625, "Exec Func"
 302535920000627, "Show func name in exec code line."
 302535920000168, "Continually call this function while showing results in an examine dialog."
@@ -548,7 +550,7 @@ Press once to clear this examine, again to clear all."
 302535920000520, "Parents"
 302535920000525, "Ancestors"
 302535920000553, "Examine parent and ancestor classes."
-302535920000414, "Are you sure you wish to delete <color red>%s</color>?"
+302535920000414, "Are you sure you wish to delete <color ChoGGi_red>%s</color>?"
 302535920000228, "Assign to"
 302535920000043, "<green>Enter</green> to scroll to next found text
 <green>Ctrl-Enter</green> to scroll to previous found text
@@ -929,7 +931,7 @@ Sequence part may have more then one check, you may have to skip twice or more.
 302535920000282, "This will remove the mystery, if you start it again; it'll be back to the start."
 302535920000283, "Remove All"
 302535920000284, "This will remove all the mysteries!"
-302535920000285, "Click ""<color red>OK</color>"" to skip requirements (Warning: may cause issues later on, untested)."
+302535920000285, "Click ""<color ChoGGi_red>OK</color>"" to skip requirements (Warning: may cause issues later on, untested)."
 302535920000286, "Part"
 302535920000287, "Timer delay removed (may take upto a Sol)."
 302535920000288, "Advancement requires"
@@ -1159,7 +1161,7 @@ This is temporary, use Options>Video>Framerate Counter to permanently save it."
 302535920000416, "Delay isn't a valid class."
 302535920000049, "Loading Screen Log"
 302535920001621, "Be able to see the console log (and other dialogs) during the loading screen.
-<color red>Warning</color>: Leave welcome to Mars msg onscreen till map is loaded."
+<color ChoGGi_red>Warning</color>: Leave welcome to Mars msg onscreen till map is loaded."
 302535920001591, "Show Grid Small"
 302535920001592, "Small (use Disable to hide)."
 302535920001556, "Use the selected object."
@@ -1215,8 +1217,8 @@ You need my HelperMod installed to be able to use this."
 302535920001276, "Nothing is deleted unless you check this."
 302535920000146, "Delete Saved Games"
 302535920001273, "Shows a list of saved games, and allows you to delete more than one at a time."
-302535920001274, "This is <color red>permanent!</color>"
-302535920001275, "Deleted <color red>%s</color> saved games."
+302535920001274, "This is <color ChoGGi_red>permanent!</color>"
+302535920001275, "Deleted <color ChoGGi_red>%s</color> saved games."
 302535920000467, "Path Markers"
 302535920001175, "Debug FX"
 302535920000453, "Reload Lua"
@@ -1224,14 +1226,14 @@ You need my HelperMod installed to be able to use this."
 302535920001164, "Flattening has been stopped, now updating buildable."
 302535920000851, "isn't an object?
 Sounds like a borked save; send me the file and I'll take a look"
-302535920000852, "This will delete all <yellow>%s</yellow> of <color red>%s</color>"
-302535920000856, "Yes, I want to delete all: <color red>%s</color>"
+302535920000852, "This will delete all <yellow>%s</yellow> of <color ChoGGi_red>%s</color>"
+302535920000856, "Yes, I want to delete all: <color ChoGGi_red>%s</color>"
 302535920000857, "No, I need to backup my save first (like I should've done before clicking something called ""<green>Delete All</green>"")."
 302535920000859, "Anim State"
 302535920000860, "Set Anim State"
 302535920000861, "Current State: <green>%s</green>"
 302535920000868, "Choose Map"
-302535920000869, "This <color red>%s</color> doesn't have GetPath function, something is probably borked."
+302535920000869, "This <color ChoGGi_red>%s</color> doesn't have GetPath function, something is probably borked."
 302535920000871, "Doesn't seem to be an object that moves."
 302535920000872, "Pathing"
 302535920000873, "Doesn't work that well."
@@ -1240,7 +1242,7 @@ Sounds like a borked save; send me the file and I'll take a look"
 302535920000878, "Skip Flags"
 302535920000879, "Doesn't add the little flags, just lines and spheres (good for larger maps)."
 302535920000454, "Fires some commands to reload lua files (use OnMsg.ReloadLua() to listen for it).
-<color red>Warning</color>: Disables cheat menu submenus."
+<color ChoGGi_red>Warning</color>: Disables cheat menu submenus."
 302535920000874, "(see Path Markers to mark more than one at a time)."
 302535920001176, "Toggle showing FX debug info in console."
 302535920001184, "Particles"
@@ -1417,7 +1419,8 @@ Blue = pass/no build, Red = no pass/no build."
 302535920000578, "Change waste storage depot capacity."
 302535920000579, "Storage Mechanized Depots"
 302535920000580, "Change mechanized depot storage capacity."
-302535920000036, "<color red>Click lightly!</color>"
+302535920000036, "<color ChoGGi_red>Click lightly!</color>
+Be sure to read the tooltip and if unsure than ask me."
 302535920001533, "Remove Invalid Label Objects"
 302535920001534, "Checks the city.labels for invalid objects and removes them from the label."
 302535920001483, "Missing Mod Buildings"
@@ -1430,16 +1433,12 @@ This may break the save in other ways, best to just use it for testing."
 302535920001295, "Drones Not Repairing Domes"
 302535920001296, "If your drones are just dumping polymers into the centre of your dome."
 302535920000922, "Fixes"
-302535920000935, "Most Fixes"
 302535920000938, "Toggles"
 302535920000615, "Sort Command Center Dist"
 302535920001071, "Drone Charges From Rover Wrong Angle"
 302535920000248, "Colonists Stuck Outside Service Buildings"
 302535920000464, "Updating Rovers"
 302535920000964, "Rover Infinite Loop"
-302535920001268, "RC Transports on a route have a certain tendency to get stuck and bog the game down (high speed feels like normal speed).
-
-This'll check for and stop any borked ones (it'll show a popup msg when it stops one)."
 302535920000249, "Colonists will leave a diner/etc and stop outside of it and not move anymore (might be related to one of those smarter worker ai mods).
 
 Seems to fix it after a Sol or two, so you shouldn't need to leave this running."
@@ -1469,6 +1468,7 @@ This may remove some smoke stacks like the concrete extractors (just toggle work
 302535920000596, "If you have a mirror sphere stuck at the edge of the map, and it just won't die/move... (also removes any borked cone of a captured sphere)."
 302535920000597, "Stutter With High FPS"
 302535920000598, "If your units are doing stutter movement, but your FPS is fine then you likely have a unit with borked pathing (or there's one of those magical invisible walls in it's way).
+<color ChoGGi_red>This can cause your save to be corrupted and not load (likely with a bunch of mods), be very careful about using it.</color>
 
 This also works for colonists practicing the human centipede."
 302535920000599, "Drones Keep Trying Blocked Areas"
@@ -1506,7 +1506,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920001625, "List Disaster"
 302535920001626, "Overrides List Normal."
 302535920001618, "Map Data (Breakthroughs)"
-302535920001619, "This will take <color red>longer</color> (about 15s)."
+302535920001619, "This will take <color ChoGGi_red>longer</color> (about 15s)."
 302535920000973, "Change the value (-1) to an index number from Terrain Textures.
 Open <green>%s</green> to see all the textures, the tooltips show the texture index."
 302535920001237, "Terrain Type Remap"
@@ -1652,7 +1652,7 @@ Not noticeable unless using higher zoom."
 302535920000655, "Toggle Cursor"
 302535920000656, "Toggle between moving camera and selecting objects."
 302535920000221, "See log for any batch errors."
-302535920001572, "<color red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
+302535920001572, "<color ChoGGi_red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
 You can also stick the executable in the profile folder to use it instead (<green>no crashing</green>):
 <yellow>%s</yellow>."
 302535920000323, "Modding"
@@ -1671,7 +1671,7 @@ If you have a uuid in your metadata.lua this checkbox is ignored and it'll try t
 302535920001482, "Prints to console how many ticks it takes the map to load."
 302535920000039, "Spam in the console log doesn't necessarily mean a problem with SM (it could just a warning).
 
-<color red>This report will go to the %s developers not me.</color>"
+<color ChoGGi_red>This report will go to the %s developers not me.</color>"
 302535920001463, "Bug Report"
 302535920001464, "Yes, I know what I'm doing. This is a bug."
 302535920001427, "Pack"
@@ -1702,7 +1702,7 @@ If you have a uuid in your metadata.lua this checkbox is ignored and it'll try t
 302535920001260, "Blank"
 302535920001261, "Uploads a blank mod, and prints id in log."
 302535920001262, "<green>%sModUpload</green> folder is empty and waiting for files."
-302535920001263, "<color red>%s</color> is different from your name, do you have permission to upload it?"
+302535920001263, "<color ChoGGi_red>%s</color> is different from your name, do you have permission to upload it?"
 302535920001244, "Saves settings to file, and applies any changes."
 302535920001245, "Abort without touching anything."
 302535920000466, "This will disable the cheats menu, cheats panel, and all hotkeys.
