Expanded Cheat Menu/Lib:
- Version bump.
- Added some more text to examine list tooltip.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 "ID", " Text"
-302535920000935,
-302535920000990,
-302535920001066,
 302535920001085,
 302535920001086,
 302535920001087,
@@ -1143,8 +1140,9 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920000935, "Random mini missions that happen while playing."
 302535920000978, "Skip Story Bits"
-302535920000980, "Always select first option after slight delay."
+302535920000980, "When a story bit appears; always select first option after slight delay."
 302535920000220, "Like %s, but this shows hex positioning (offset or map, change in settings)."
 302535920000680, "Follow Mouse Grid Position"
 302535920000681, "Type of positioning to show."
@@ -1651,6 +1649,8 @@ Not noticeable unless using higher zoom."
 302535920000654, "Select (or mouse over) an object to follow."
 302535920000655, "Toggle Cursor"
 302535920000656, "Toggle between moving camera and selecting objects."
+302535920000990, "(PC)"
+302535920001066, "(Console)"
 302535920000221, "See log for any batch errors."
 302535920001572, "<color ChoGGi_red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
 You can also stick the executable in the profile folder to use it instead (<green>no crashing</green>):
