--- a/Mods ChoGGi/Domes Limit Births/changes.txt
+++ b/Mods ChoGGi/Domes Limit Births/changes.txt
@@ -1,3 +1,6 @@
+v0.3
+Cleaned up help text.
+
 v0.2
 Apply to all stayed enabled if you deselected and reselected the same dome.
 Repositioned where it's displayed and made the tooltip more obvious.
