--- a/Mods ChoGGi/Drones Use Nearest Waste Dump/changes.txt
+++ b/Mods ChoGGi/Drones Use Nearest Waste Dump/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Updated mod to ignore anything that isn't a waste dump site.
+
 v0.4
 Fixed fixed issue Waste Rock Processors (thanks cybersol).
 
