Expanded Cheat Menu:  - Code cleanup
### Changed:
- Show the rest of the presets in the examine>presets menu (denoted by an asterisk).
- Added a warning to the Rover/Drone set speed tooltip.

Mods:

Building Placement Orientation 0.9:
Mod option to disable orientation (for pure pipette use).

Increase Ranch Storage:
Increase the limit allowed for the ranch storage depots, so cows are practical.
Sets storage to 600, see mod options to change (if you use a mod that increases output).

Infobar More Info 1.8:
A group with a single object will select that object normally instead of grouped.

Remove Unwanted Colonists 0.9:
Localed something that should'nt have been global.

Toggle Visible Vegetation:
Adds mod option to hide trees.
Includes mod option to also toggle bushes (needs to be enabled if turning visibility back on).

github@choggi.org

--- a/Mods ChoGGi/Building Placement Orientation/todo.txt
+++ b/Mods ChoGGi/Building Placement Orientation/todo.txt
@@ -1,4 +1,6 @@
-For placing large number of triangular buildings, eg. large solar panels,
+ mrudat
+ 
+ For placing large number of triangular buildings, eg. large solar panels,
 it would be useful to have an option to rotate the building one step after each placement.
 
 A possibly conflicting thought is that it would be nifty to track rotation of individual buildings separately,
