--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,6 @@
+v1.9
+Changed resource maintenance amounts to reflect benefits of nearby Triboelectric Scrubbers.
+
 v1.8
 Added percentage counts to colonist age groups.
 
