Expanded Cheat Menu:
- Clicking the title bar of my dialogs didn't bring them to the top.

Mods:

Infobar More Info 2.0:
Fixed issue with Shuttle hubs and not Shuttles (thanks Stone Cold Jane Austen).

Notification Pause 1.2:
Fixed freezing on new games with certain options enabled (thanks Lesandrina).

Restore Request Maintenance 1.3:
Added support for Large Drone Station by RustyDios.

github@choggi.org

--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,6 @@
+v2.0
+Fixed issue with Shuttle hubs and not Shuttles (thanks Stone Cold Jane Austen).
+
 v1.9
 Changed resource maintenance amounts to reflect benefits of nearby Triboelectric Scrubbers.
 
