--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,8 @@
+v1.0
+Added flying around sound to murder pods.
+Random delay before idiot looks at idiot monument.
+Victims name is shown in selection panel for pod.
+
 v0.9
 Localed something that should'nt have been global.
 
