Expanded Cheat Menu: ### Added: - Cheats pane>DblChargeCap: Increase/reset charge/discharge of water/air/elec tanks.
### Changed:
- Large water tank didn't have capacity double cheat (thanks Lesandrina).

Lib:
- Titlebar rollup was showing exec code area (ignoring checkbox).

Mods:

Colonist More Hover Info 0.2:
Added colour to stat amount (green = >75, yellow = 74-51, red = <50).

Game Rules Breakthroughs 1.1:
Fixed issue with <param> showing up instead of param amount (thanks Collateral Damage).

Plant Info:
Show info when selecting plants (soil quality, type of veg, seed production, forest plantation).

Real Time Clock 0.8:
Added mod option for opacity.

Unit Thoughts:
Select a unit (drone/rover/colonist/shuttle) to see what it's up to.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", " Text"
-302535920001095,
-302535920001096,
 302535920001268,
 302535920001309,
 302535920001342,
@@ -288,6 +286,8 @@ You can copy and paste numbers if you want."
 302535920000733, "Open a preset in the editor."
 302535920001410, "Toggle Visibility"
 302535920000735, "Timer delay skipped"
+302535920001095, "Double the charge capacity of this <green>%s</green>."
+302535920001096, "Reset the charge capacity of this <green>%s</green> to default."
 302535920001531, "Make the building model look like a construction site (toggle)."
 302535920000903, "Unfreeze frozen object."
 302535920001431, "Kill this colonist!"
