Triboelectric Sensor Tower: Sensor tower count wasn't updated.
github@choggi.org

--- a/Mods ChoGGi/Triboelectric Sensor Tower/changes.txt
+++ b/Mods ChoGGi/Triboelectric Sensor Tower/changes.txt
@@ -1,3 +1,4 @@
 v0.2
+Sensor tower count wasn't updated.
 Made sure consump/main costs are a combination of trib + sensor costs.
 Slightly increased main build up amount.
