ECM/Lib: - Changed DotNameToObject to DotPathToObject.
Mods:

Changed Android Spec Uniforms to Biorobot Specialisation Uniforms.

Colonists Force To New Dome 0.8:
Mod option to also remove invalid colonists stuck in dome.

Dome Show Connected Objects 0.3:
Added mod option to clean up invalid objects in a dome.

Removed Mod Options Expanded (use my Library instead).

Photo Filter Toggle 0.3:
Added mod options to adjust filter settings.

github@choggi.org

--- a/Mods ChoGGi/Colonists Force To New Dome/changes.txt
+++ b/Mods ChoGGi/Colonists Force To New Dome/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Mod option to also remove invalid colonists stuck in dome.
+
 v0.7
 Fixed issue with colonists being stuck in old/new dome (hopefully for good).
 Code cleanup/Slight UI changes.
